added resume, changed about section, adjusted app.py accordingly

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -1,1 +1,4 @@
-<h2>This is where I would put a short bio about myself!</h2>
+<h2>Here is just a little bit about me!</h2>
+<h3>I am originally from Arizona, but I moved to Logan to go to Utah State!</h3>
+<h3>I am excited to learn more about Cloud Computing in this class!</h3>
+<h3>Thanks for reading a little bit about me!</h3>
